--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "appId": "es.jlcs.fabric-tools"
   },
   "dependencies": {
+    "@fidm/x509": "^1.2.1",
     "@types/jest": "24.0.12",
     "@types/node": "12.0.0",
     "@types/react": "16.8.17",
